# clique_python_wrapper

./: CMakeLists.txt  README.md  package.xml  setup.py
src/: max_weighted_clique_module.cpp
src/clique_python_wrapper/: clique.py  test_find_clique.py
src/cliquer/: graph.c  set.h
